# smol-data-automation

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
config/: connections.yaml  connections_local.yaml  pipelines.yaml
datasets/: breast-cancer-data.sql  crypto_markets.json  iris.xlsx
src/: __init__.py  __main__.py  analyzers.py  exceptions.py  extractors.py  transformers.py  validators.py
src/config/: __init__.py  connections.py  pipelines.py
src/reporters/: __init__.py  base.py  composite_file_email.py  database.py  mock_bi_custom_api.py  utils.py
tests/: conftest.py  test_analyzers.py  test_extractors.py  test_transformers.py  test_validators.py
